src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_ACV__c</fullName>
        <label>Account ACV</label>
        <summarizedField>Opportunity.ACV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New Business - Direct, New Business - Partner, Upsell/Cross Sell</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Info__c</fullName>
        <description>To capture notes on the account.</description>
        <label>Account Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Journey__c</fullName>
        <description>Capture the Account journey details here.</description>
        <label>Account Journey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                    <default>true</default>
                    <label>Target</label>
                </value>
                <value>
                    <fullName>Aware</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_NRR__c</fullName>
        <description>This is the NRR number for the individual account.</description>
        <inlineHelpText>Manual to start. Need to create a formula based on opportunities.</inlineHelpText>
        <label>Account NRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Name_Custom__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Account Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Common_VC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the VC that we have in common?</inlineHelpText>
        <label>Common VC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Journey__c</fullName>
        <description>Capture customer journey as it progresses.</description>
        <label>Customer Journey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Notes__c</fullName>
        <inlineHelpText>Enter any important information about the customer relevant to founders, sales, customer success, etc.</inlineHelpText>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_lifetime_value_CLTV__c</fullName>
        <description>Customer lifetime value (CLTV) - Rollup of all closed won deals</description>
        <label>Customer lifetime value (CLTV)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New Business, Renewal, Upsell/Cross Sell, One Time, Paid Pilot, New Business - Direct, New Business - Partner, Renewal, Upsell/Cross Sell, Professional Services - One Time, Professional Services - Add-On, Paid Pilot</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo.</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Field_test__c</fullName>
        <description>Date_Field_test</description>
        <label>Date Field test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Field__c</fullName>
        <label>Demo Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Einstein_Predict_Score__c</fullName>
        <label>Einstein Predict Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deploy value</description>
        <label>Is Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MNDA_Fully_Executed_Date__c</fullName>
        <inlineHelpText>What date was this MNDA Fully Executed?</inlineHelpText>
        <label>MNDA Fully Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MNDA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have we signed an MNDA with this account?</inlineHelpText>
        <label>MNDA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSA_Date__c</fullName>
        <inlineHelpText>What date was the MSA fully executed?</inlineHelpText>
        <label>MSA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have we signed an MSA with this account?</inlineHelpText>
        <label>MSA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pipelines__c</fullName>
        <label>Number of Pipelines</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tools__c</fullName>
        <label>Number of Tools</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Email__c</fullName>
        <description>Capture the Point of Contact in this field</description>
        <inlineHelpText>Capture the Point of Contact in this field.Check Trigger Pipeline</inlineHelpText>
        <label>Point of Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a referral from an investor, advisor, referrer?</description>
        <label>Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the individual that referred this account?</inlineHelpText>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedAccounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Active_Account__c</fullName>
        <description>If Account has an activity logged within the last 30 days, this field will return a value of 1.</description>
        <formula>IF( TODAY () - LastActivityDate &lt;= 30, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Domain__c</fullName>
        <description>This field is used for syncing Account records with SalesLoft. A &apos;domain&apos; value is a required in a URL format in order for Account records to sync with SalesLoft.</description>
        <formula>IF((CONTAINS(Website,&quot;.&quot;)&amp;&amp;(NOT(CONTAINS(Website,&quot; &quot;))))
,Website+&apos;?&apos;+CASESAFEID(Id),CASESAFEID(Id)+&apos;.com&apos;)</formula>
        <inlineHelpText>This field is used for syncing Account records with SalesLoft.</inlineHelpText>
        <label>SalesLoft Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <description>Validate Incremental Merge.</description>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territories__c</fullName>
        <label>Territories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Field__c</fullName>
        <description>Text Field</description>
        <label>Text Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Opp_Count__c</fullName>
        <label>Total Opp Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Roles__c</fullName>
        <description>Created to verify sort</description>
        <label>User_Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_User_Roles__c</fullName>
        <description>Created to validate sort order</description>
        <label>a User Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3UltimateParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>dc3UltimateParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Account_Team</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Account Team</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>CustomRecordSample</fullName>
        <active>true</active>
        <label>CustomRecordSample</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_RecordType</fullName>
        <active>true</active>
        <label>CustomRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Account</fullName>
        <active>true</active>
        <description>To store accounts outside of Organisation</description>
        <label>External Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Accounts</fullName>
        <active>true</active>
        <description>Used for Storing Within Organisation Account Details</description>
        <label>Internal Accounts</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_for_Customer</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(Is_Customer__c,  ISBLANK( Demo_Field__c )) , True, False)</errorConditionFormula>
        <errorMessage>This is Customer Account and the demo field should be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>